# usd-cpp

./: CMakeLists.txt  HelloUsd.usda  main.cpp
schema/: schemaInfo.json
stage/: util.cpp  util.h
